--- a/index.html
+++ b/index.html
@@ -222,46 +222,45 @@
 			<!-- THE ABOVE </DIV> TAG CLOSES THE ROW -->
 		</div>
 	</section>
-
-
+<!-- END OF STUDENT REPS DETAILS-->
+<!--START OG YOU SAID WE DID SECTION-->
 	<section id="wedid">
 		<div class="container">
-		
 			<div class="row">
-							<div class="section-title">
+				<div class="section-title">
 					<h2>You said.... we did</h2>
 				</div>
-			
 			</div>
 			<div class="row">
-			<p>Connecting with students is very important to the Department of Psychology. There are several opportunities for you to provide feedback on the teaching and learning in Psychology at Liverpool Hope University. The tutors take your feedback seriously, whether that be formal feedback via the course evaluations at the end of the year, feedback from Student Representatives via the Student Voice Committee, or informal feedback in lectures, seminars, and tutorials. At the start of the new academic year, we outline how we are using this feedback for the 2023-24 academic year. Here are some things that you told us last year and how we have responded.</p>
-
+			<!-- THIS TEXT WILL NEED UPDATING ANNUALLY WITH THE NEW DATE-->
+				<p>Connecting with students is very important to the Department of Psychology. There are several opportunities for you to provide feedback on the teaching and learning in Psychology at Liverpool Hope University. The tutors take your feedback seriously, whether that be formal feedback via the course evaluations at the end of the year, feedback from Student Representatives via the Student Voice Committee, or informal feedback in lectures, seminars, and tutorials. At the start of the new academic year, we outline how we are using this feedback for the 2023-24 academic year. Here are some things that you told us last year and how we have responded.</p>
 			</div>
 			<h5>Jump to....<a href="#wedid">Level C</a> | <a href="#wedidI">Level I</a> | <a href="#wedidH">Level H </a></h5>
-			<H2>Responding to Level C Student feedback</h2>
-			<div class="owl-carousel owl-theme owl-courses">
-				<div class="col-md-10 col-sm-10">
-					<div class="item">
-						<div class="courses-thumb">
-							<div class="courses-top">
-								<div class="courses-image">
-									<img src="images/smallred.png" class="img-responsive" alt="">
+				<H2>Responding to Level C Student feedback</h2>
+					<div class="owl-carousel owl-theme owl-courses">
+						<div class="col-md-10 col-sm-10">
+							<div class="item">
+								<div class="courses-thumb">
+									<div class="courses-top">
+									<!--I USE RED TO REPRESENT LEVEL C. THE H4 TAG IS TO TYPE IN THE COURSE/CORE AND THE SPAN TAG IS FOR THE PART OF THE COURSE THE COMMENT IS ABOUT-->
+										<div class="courses-image">
+											<img src="images/smallred.png" class="img-responsive" alt="">
+										</div>
+										<div class="courses-date">
+										 
+											<h4>Level C Core 1 2023/24</h4>
+											<span>Core 1 Lecture Series</span>
+										</div>
+									</div>
+									<div class="courses-detail">
+<!-- THIS IS THE BRIEF SYNOPSIS OF THE STUDENT VOICE COMMENT - OR FROM EVALUATIONS ETC THE STRONG TAG IDENTIFIES THE STUDENT VOICE AND THE P TAG IDENTIFIES OUR RESPONSE THESE WILL NEED ADDING TO AFTER SV COMMITTEE MEETINGS, STUDENT EVALS ETC-->
+										<p><strong>‘There are too many lectures focussing on the history of Psychology’</strong></p>
+										<p>While you should appreciate the importance of the history of the discipline, we appreciate that feedback from students indicates it is not necessarily their favourite topic. As such we have rewritten a lecture to give students more focussed direction about careers in psychology</p>
+									</div>
 								</div>
-								<div class="courses-date">
-									<h4>Level C Core 1 2023/24</h4>
-									<span>Core 1 Lecture Series</span>
-
-								</div>
-							</div>
-							<div class="courses-detail">
-
-								<p><strong>‘There are too many lectures focussing on the history of Psychology’</strong></p>
-								<p>While you should appreciate the importance of the history of the discipline, we appreciate that feedback from students indicates it is not necessarily their favourite topic. As such we have rewritten a lecture to give students more focussed direction about careers in psychology</p>
 							</div>
 						</div>
-					</div>
-				</div>
-
+<!-- THIS IS AN EXAMPLE OF A LEVEL C SV COMMENT AND RESOLUTION. COPY IT, PASTE IT AFTER ALL LEVEL C COMMENTS AND EDIT THE <H4></H4>, THE sPAN TAGS, AND THE CONTENT IN THE <P> </P>TAGS -->:
 				<div class="col-md-10 col-sm-10">
 					<div class="item">
 						<div class="courses-thumb">
@@ -883,10 +882,24 @@
 	<section id="news">
 		<div class="container">
 			<div class="row">
-
+				
 				<div class="col-md-12 col-sm-12">
 					<div class="section-title">
 						<h2>News &amp; Events<small>What's going on in Psychology?</small></h2>
+					</div>
+				</div>
+				<div class="col-sm-4 col-md-4">
+					<div class="team-thumb">
+						<div class="team-image">
+							<img src="images/smallnavy.png" class="img-responsive" alt="">
+						</div>
+						<div class="team-info">
+							<h5>Studentship Success</h5>
+							<span>03/11/23</span>
+							<span>Dr Laura Helyer will be undertaking a staff-led doctoral studentship, to conduct research on
+the morality of school disciplinary practices and policies.
+  <a href="helyer.html">For more information about this exciting new project click here</a></span>
+						</div>
 					</div>
 				</div>
 								<div class="col-md-4 col-sm-4">
@@ -901,7 +914,9 @@
 							<span>
 For those who missed Dr. Senna's fascinating research talk on Wednesday 25/10/23 or wish to access the content, it is now accessible on the Departmental Moodle.
 You can find it under "Research Information" in the "Research Seminars" section.
-or by <a href="resources/Hope_ISenna_presentation2023Upload.pdf">downloading a PDF version of the presentation here</a></span>
+or by <a href="resources/Hope_ISenna_presentation2023Upload.pdf">downloading a PDF version of the presentation here</a>.
+ 
+				</span>
 						</div>
 					</div>
 				</div>
@@ -918,7 +933,8 @@ or by <a href="resources/Hope_ISenna_presentation2023Upload.pdf">downloading a P
 						</div>
 					</div>
 				</div>
-
+			</div>
+<div class="row">
 				<div class="col-sm-4 col-md-4">
 					<div class="team-thumb">
 						<div class="team-image">
@@ -932,8 +948,8 @@ or by <a href="resources/Hope_ISenna_presentation2023Upload.pdf">downloading a P
 						</div>
 					</div>
 				</div>
-				</div>
-<div class="row">
+
+
 				<div class="col-md-4 col-sm-4">
 					<div class="team-thumb">
 						<div class="team-image">
@@ -1169,6 +1185,7 @@ or by <a href="resources/Hope_ISenna_presentation2023Upload.pdf">downloading a P
 
 	<!-- SCRIPTS -->
 	<script src="js/jquery.js"></script>
+	<script src="js/myWindow.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/owl.carousel.min.js"></script>
 	<script src="js/smoothscroll.js"></script>
