--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@
 				<div class="col-sm-4 col-md-4">
 					<div class="team-thumb">
 						<div class="team-image">
-							<img src="images/helyer.gif" class="img-responsive" alt="">
+							<img src="images/Helyer.gif" class="img-responsive" alt="">
 						</div>
 						<div class="team-info">
 							<h5>Studentship Success</h5>
