--- a/texas.html
+++ b/texas.html
@@ -81,16 +81,24 @@
 		<div class="container">
 			<div class="row">
 				<div class="section-title">
-					<h2>Studentship Success<small>Pedagogies of Punishment</small></h2>
-						<p>Dr Laura Helyer will be undertaking a staff-led doctoral studentship, to conduct research on the morality of school disciplinary practices and policies. 
-
-She will work with Dr John Tillson (Education Studies) and Dr Lorna Bourke (Psychology),  one external and one internal collaborator will provide advisory input Dr Winston C Thompson (philosophy of education, Ohio State University) and Dr Julie Hadwin (Psychology). The supervisory team successfully applied to the Philosophy of Education Society of Great Britain for matched funds with Liverpool Hope for the studentship totalling £30,000. Liverpool Hope has agreed to waive Dr Helyer’s full-time fees. The studentship was advertised on jobs.ac.uk, and Dr Helyer won out over 11 applications. Dr Helyer’s previous PhD was in Creative Writing and American Literature and she has built a career as an English teacher. </p>
-
-<p>The Pedagogies of Punishment project assembles an international, interdisciplinary team of collaborators with diverse identities to identify and advocate for more just responses to student wrongdoing. Funding ($39,967) was previously provided to Drs Tillson and Thompson by the Centre for Ethics and Education and details of publications arising from the research can be found on the project website: https://www.pedagogiesofpunishment.com/. This PhD studentship builds on the Pedagogies of Punishment project by enabling a student to draw on philosophical and psychological frameworks to cast new light on the morality of school disciplinary policies and practices.</p>
-
-<p>In her presentation, Laura identified a family of tightly connected, under-explored and ethically interesting questions about whether and how teachers should enforce zero-tolerance codes of conduct they do not accept. She gave a clear and compelling proposal, identifying relevant philosophical rights-based frameworks and psychological frameworks and gave strong indications as to how they could be used to resolve the questions she identified. </p>
-
-<p>We are very much looking forward to welcoming her to our research team.
+					<h2>49th Annual Conference of the Association of Moral Education<small>Professor Neil Ferguson</small></h2>
+						<img src="images/neilf.jpg" style="float:left" padding="20px"><p>At the end of October, I travelled to Texas Christian University (TCU) in Fort Worth, TX for the Association of Moral Education’s 49 th Annual Conference. The AME provide an international forum for the interdisciplinary study of the moral and ethical dimensions of human development and education, while this year’s conference primarily focused on positive youth development.</p><img src="images/tcu.jpg" style="float:right" padding="20px"> <p>The
+beautiful TCU campus welcomed a global mix of teachers, academics, community activists to discuss
+the role moral and civic education in fostering positive child and adolescent development. As well as
+flying the flag for Liverpool Hope, I was there as a Trustee and Editorial Board Member of the Journal
+of Education, which is the AME’s affiliated journal, partner and sponsor. In that capacity we provided
+advice on getting published in the journal, explored future research collaborations and hosted a
+reception.</p><img src="images/jme.jpg" style="float:left" padding="20px"><p> For me, the highlight of the conference was Professor Judith Smetana’s (University of
+Rochester) Kohlberg Memorial Lecture. While I was very familiar with Judith’s works and read much
+of her research on Social-Cognition Domain Theory for my PhD, it was being the dad to a teenage
+son that really sparked my interest in her keynote lecture. Her lecture focused on how parents can
+survive and thrive through the long and winding road of adolescent development. Presenting data
+on adolescent development from various cultural contexts, Judith explored how parents can support
+teenagers as they complete the key developmental task of adolescence - achieving autonomy. I left
+feeling I could see some light at the end of the tunnel.</p><p> I also managed to see a cattle drive, some
+real-life cowboys, lots of Stetsons and listen to some live country music. AME’s will host their 50th
+anniversary conference in 2024, so I’m looking forward to supporting and enjoying that one next
+year.
 </p>			
 						
 				
