--- a/index.html
+++ b/index.html
@@ -878,149 +878,141 @@
 
 
 
-	<!-- news -->
-	<section id="news">
-		<div class="container">
-			<div class="row">
-				
-				<div class="col-md-12 col-sm-12">
-					<div class="section-title">
-						<h2>News &amp; Events<small>What's going on in Psychology?</small></h2>
-					</div>
-				</div>
-								<div class="col-sm-4 col-md-4">
-					<div class="team-thumb">
-						<div class="team-image">
-							<img src="images/SeminarMcAuley.png" class="img-responsive" alt="">
-						</div>
-						<div class="team-info">
-							<h5>Research Seminar</h5>
-							<span>22/11/23</span>
-							<span>Psychology Research Seminar - Wednesday 22nd November, 2pm, SSA007. Professor James McAuley, Honorary Research Fellow in Political Psychology at Liverpool Hope, will deliver his seminar entitled Recalling the Future: Collective memory, narratives and re-writing the past in Northern Ireland. </span>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-4 col-md-4">
-					<div class="team-thumb">
-						<div class="team-image">
-							<img src="images/Helyer.gif" class="img-responsive" alt="">
-						</div>
-						<div class="team-info">
-							<h5>Studentship Success</h5>
-							<span>03/11/23</span>
-							<span>Dr Laura Helyer will be undertaking a staff-led doctoral studentship, to conduct research on
-the morality of school disciplinary practices and policies.
-  <a href="helyer.html">For more information about this exciting new project click here</a></span>
-						</div>
-					</div>
-				</div>
-								<div class="col-md-4 col-sm-4">
-					<div class="team-thumb">
-						<div class="team-image">
-							<img src="images/ireneTalk.png" class="img-responsive" alt="">
-						</div>
-						<div class="team-info">
-							<h5>ICYMI</h5>
-							<span>27/10/23</span>
-
-							<span>
-For those who missed Dr. Senna's fascinating research talk on Wednesday 25/10/23 or wish to access the content, it is now accessible on the Departmental Moodle.
-You can find it under "Research Information" in the "Research Seminars" section.
-or by <a href="resources/Hope_ISenna_presentation2023Upload.pdf">downloading a PDF version of the presentation here</a>.
- 
-				</span>
-						</div>
-					</div>
-				</div>
-	<div class="row">							
-				<div class="col-sm-4 col-md-4">
-					<div class="team-thumb">
-						<div class="team-image">
-							<img src="images/caerdeon1.png" class="img-responsive" alt="">
-						</div>
-						<div class="team-info">
-							<h5>Plas Caerdeon</h5>
-							<span>18/10/23</span>
-							<span>Psychology staff members took to the hills with 30+ Psychology students to visit <a href="https://www.hope.ac.uk/caerdeon/">Plas Caerdeon</a>, Hope's outdoor activity centre near Barmouth in Wales. </span><span>Activities included kayaking, slate mine walking, zip wire and mountain biking to name just a few of the opportunities on offer. </span>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-4 col-md-4">
-					<div class="team-thumb">
-						<div class="team-image">
-							<img src="images/sennaI.png" class="img-responsive" alt="">
-						</div>
-						<div class="team-info">
-							<h5>Research Seminar</h5>
-							<span>25/10/23</span>
-							<span>We are excited to announce our first departmental research seminar, starting next week on the 25th of October at 2pm in room SSA007.
-								Dr. Irene Senna will be presenting her research on "Recovering from Blindness: Learning to see after sight restoration from congenital cataracts."</span>
-						</div>
-					</div>
-				</div>
-
-
-				<div class="col-md-4 col-sm-4">
-					<div class="team-thumb">
-						<div class="team-image">
-							<img src="images/globalhope1.png" class="img-responsive" alt="">
-						</div>
-						<div class="team-info">
-							<h5>Psychology@ Global Hope</h5>
-							<span>28/08/23</span>
-
-							<span>During the summer Psychology staff and students travelled to Brazil on a Global Hope project to support the work and development of Ramacrisna Arts Co-operative. Read Dr Jamie Lingwood's <a href="https://sites.google.com/hope.ac.uk/drjamielingwood/blog-posts/global-hope-trip-to-brazil?authuser=0&pli=1">blog post about the trip here</a></span>
-						</div>
-					</div>
-				</div>
-				</div>
-<div class="row">				
-			<div class="col-md-4 col-sm-4">
-					<div class="team-thumb">
-						<div class="team-image">
-							<img src="images/globalhope2.png" class="img-responsive" alt="">
-						</div>
-						<div class="team-info">
-							<h5>Student Blog: Global Hope</h5>
-							<span>28/08/23</span>
-
-							<span>Josie, a combined honours student of Music and Psychology joined staff and other students on a recent trip to Brazil. Josie documented their experience in a <a href="https://josieinbrazil23.blogspot.com/">blog which you can access here</a>.If you would like to know more about opportunities to volunteer with Global Hope you can <a href="https://www.hope.ac.uk/undergraduate/degreeenhancementopportunities/globalhope/">read all about it on the website</a> </span>
-						</div>
-					</div>
-				</div>
-
-				<!--<div class="col-md-4 col-sm-4">
-					<div class="team-thumb">
-						<div class="team-image">
-							<img src="images/smallgreen.png" class="img-responsive" alt="">
-						</div>
-						<div class="team-info">
-							<h3>Date</h3>
-							<span>Headline</span>
-
-							<span>Additional Info</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4 col-sm-4">
-					<div class="team-thumb">
-						<div class="team-image">
-							<img src="images/smallred.png" class="img-responsive" alt="">
-						</div>
-						<div class="team-info">
-							<h3>Date</h3>
-							<span>Headline</span>
-
-							<span>Additional Info</span>
-						</div>
-					</div>
-				</div>
--->
+	<!-- Latest news -->
+<section id="news">
+	<div class="container">
+		<div class="row">
+			<div class="section-title">
+				<H2>News &amp; Events<small>What's going on in Psychology?</small></h2>
 			</div>
 		</div>
-	</section>
+		<div class="owl-carousel owl-theme owl-courses">
+			<div class="col-md-10 col-sm-10">
+				<div class="item">
+					<div class="courses-thumb">
+						<div class="courses-top">
+							<div class="courses-image">
+								<img src="images/texas.gif" class="img-responsive" alt="">
+							</div>
+						</div>
+						<div class="courses-detail">
+							<span><Strong>08/11/23 - </Strong></span>
+							<span>At the end of October, Professor Neil Ferguson travelled to Texas Christian University (TCU) in Fort Worth, TX for the Association of Moral Education’s 49 th Annual Conference. The AME provide an international forum for the interdisciplinary study of the moral and ethical dimensions of human development and education, while this year’s conference primarily focused on positive youth development. <a href="texas.html">Read more about the importance of Neil's Texan trip here</a></span>
+						</div>
+						</div>
+					</div>
+				</div>
+	
+		<div class="col-md-10 col-sm-10">
+					<div class="item">
+						<div class="courses-thumb">
+							<div class="courses-top">
+								<div class="courses-image">
+											<img src="images/SeminarMcAuley.png" class="img-responsive" alt="">
+										</div>
+										<div class="courses-detail">
+											<span><Strong>22/11/23 - Research Seminar</Strong></span>
+											<span>Psychology Research Seminar - Wednesday 22nd November, 2pm, SSA007. Professor James McAuley, Honorary Research Fellow in Political Psychology at Liverpool Hope, will deliver his seminar entitled Recalling the Future: Collective memory, narratives and re-writing the past in Northern Ireland. </span>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>						
+						<div class="col-md-10 col-sm-10">
+							<div class="item">
+								<div class="courses-thumb">
+									<div class="courses-top">
+										<div class="courses-image">
+											<img src="images/helyer.gif" class="img-responsive" alt="">
+										</div>
+										<div class="courses-detail">
+											<span><Strong>03/11/23 - Studentship Success</Strong></span>
+											<span>Dr Laura Helyer will be undertaking a staff-led doctoral studentship, to conduct research on the morality of school disciplinary practices and policies.   <a href="helyer.html">For more information about this exciting new project click here</a></span>
+						</div>
+									</div>
+								</div>
+							</div>
+						</div>						
+						<div class="col-md-10 col-sm-10">
+							<div class="item">
+								<div class="courses-thumb">
+									<div class="courses-top">
+																	<div class="courses-image">
+											<img src="images/ireneTalk.png" class="img-responsive" alt="">
+										</div>
+										<div class="courses-detail">
+											<span><Strong>27/10/23 - ICYMI</Strong></span>
+											<span>For those who missed Dr. Senna's fascinating research talk on Wednesday 25/10/23 or wish to access the content, it is now accessible on the Departmental Moodle. You can find it under "Research Information" in the "Research Seminars" section or by <a href="resources/Hope_ISenna_presentation2023Upload.pdf">downloading a PDF version of the presentation here</a>.</span>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>						
+						<div class="col-md-10 col-sm-10">
+							<div class="item">
+								<div class="courses-thumb">
+									<div class="courses-top">
+																	<div class="courses-image">
+									<img src="images/caerdeon1.png" class="img-responsive" alt="">
+										</div>
+										<div class="courses-detail">
+											<span><Strong>18/10/23 - Plas Caerdeon</Strong></span>
+											<span>Psychology staff members took to the hills with 30+ Psychology students to visit <a href="https://www.hope.ac.uk/caerdeon/">Plas Caerdeon</a>, Hope's outdoor activity centre near Barmouth in Wales. Activities included kayaking, slate mine walking, zip wire and mountain biking to name just a few of the opportunities on offer.</span>
+																				</div>
+									</div>
+								</div>
+							</div>
+						</div>						
+						<div class="col-md-10 col-sm-10">
+							<div class="item">
+								<div class="courses-thumb">
+									<div class="courses-top">
+																	<div class="courses-image">
+											<img src="images/sennaI.png" class="img-responsive" alt="">
+										</div>
+										<div class="courses-detail">
+											<span><strong>25/10/23</strong></span>
+							<span>We are excited to announce our first departmental research seminar, starting next week on the 25th of October at 2pm in room SSA007.
+								Dr. Irene Senna will be presenting her research on "Recovering from Blindness: Learning to see after sight restoration from congenital cataracts."</span>
+																			</div>
+									</div>
+								</div>
+							</div>
+						</div>						
+						<div class="col-md-10 col-sm-10">
+							<div class="item">
+								<div class="courses-thumb">
+									<div class="courses-top">
+																	<div class="courses-image">
+									<img src="images/globalhope1.png" class="img-responsive" alt="">
+										</div>
+										<div class="courses-detail">
+											<span><Strong>28/08/23 - Psychology @ Global Hope</Strong></span>
+											<span>During the summer Psychology staff and students travelled to Brazil on a Global Hope project to support the work and development of Ramacrisna Arts Co-operative. Read Dr Jamie Lingwood's <a href="https://sites.google.com/hope.ac.uk/drjamielingwood/blog-posts/global-hope-trip-to-brazil?authuser=0&pli=1">blog post about the trip here</a></span>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>						
+						<div class="col-md-10 col-sm-10">
+							<div class="item">
+								<div class="courses-thumb">
+									<div class="courses-top">
+																	<div class="courses-image">
+									<img src="images/globalhope2.png" class="img-responsive" alt="">
+										</div>
+										<div class="courses-detail">
+											<span><Strong>28/08/23 - Student Blog Global Hope</Strong></span>
+											<span>Josie, a combined honours student of Music and Psychology joined staff and other students on a recent trip to Brazil. Josie documented their experience in a <a href="https://josieinbrazil23.blogspot.com/">blog which you can access here</a>.If you would like to know more about opportunities to volunteer with Global Hope you can <a href="https://www.hope.ac.uk/undergraduate/degreeenhancementopportunities/globalhope/">read all about it on the website</a> </span>
+										</div>
+									</div>
+									</div>
+								</div>
+								</div>
+								</div>
+								</div>
 
-
+</section>
 	<!-- TESTIMONIAL -->
 	<section id="testimonial">
 		<div class="container">
