--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@
 								<div class="courses-thumb">
 									<div class="courses-top">
 										<div class="courses-image">
-											<img src="images/helyer.gif" class="img-responsive" alt="">
+											<img src="images/Helyer.gif" class="img-responsive" alt="">
 										</div>
 										<div class="courses-detail">
 											<span><Strong>03/11/23 - Studentship Success</Strong></span>
