--- a/index.html
+++ b/index.html
@@ -892,7 +892,7 @@
 					<div class="courses-thumb">
 						<div class="courses-top">
 							<div class="courses-image">
-								<img src="images/texas.gif" class="img-responsive" alt="">
+								<img src="images/Texas.gif" class="img-responsive" alt="">
 							</div>
 						</div>
 						<div class="courses-detail">
