--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
 						<figcaption>
 							<h5>Postgraduate</h5>
 								<p>Marie Stamp 20211231@hope.ac.uk</p>
+								<p>Maram Yehiah 22013341@hope.ac.uk</p>
 						</figcaption>
 					</figure>
 				</div>
@@ -892,7 +893,7 @@
 					<div class="courses-thumb">
 						<div class="courses-top">
 							<div class="courses-image">
-								<img src="images/Texas.gif" class="img-responsive" alt="">
+								<img src="images/texas.gif" class="img-responsive" alt="">
 							</div>
 						</div>
 						<div class="courses-detail">
@@ -923,7 +924,7 @@
 								<div class="courses-thumb">
 									<div class="courses-top">
 										<div class="courses-image">
-											<img src="images/Helyer.gif" class="img-responsive" alt="">
+											<img src="images/helyer.gif" class="img-responsive" alt="">
 										</div>
 										<div class="courses-detail">
 											<span><Strong>03/11/23 - Studentship Success</Strong></span>
