--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@ Glen has offered to run a support session to help you develop skills with Google
 					<div class="courses-thumb">
 						<div class="courses-top">
 							<div class="courses-image">
-								<img src="images/texas.gif" class="img-responsive" alt="">
+								<img src="images/Texas.gif" class="img-responsive" alt="">
 							</div>
 						</div>
 						<div class="courses-detail">
@@ -696,7 +696,7 @@ Glen has offered to run a support session to help you develop skills with Google
 								<div class="courses-thumb">
 									<div class="courses-top">
 										<div class="courses-image">
-											<img src="images/helyer.gif" class="img-responsive" alt="">
+											<img src="images/Helyer.gif" class="img-responsive" alt="">
 										</div>
 										<div class="courses-detail">
 											<span><Strong>03/11/23 - Studentship Success</Strong></span>
