--- a/Backup.html
+++ b/Backup.html
@@ -87,9 +87,8 @@
 					<div class="caption">
 						<div class="container">
 							<div class="col-md-6 col-sm-10">
-								<h1>Open Day</h1>
-								<h3>Welcome to Open Day and Psychology @ Hope. We are delighted that you have have come to see us in our beautiful campus at Hope Park.
-								The Psychology team are available to chat to you today at the blah blah.  There will be a subject talk in blah blah blah and for those who wish to see our laboratory facilities, we have a lab tour including some demonstrations. We hope that you enjoy your time with us, and look forward to seeing you again in the future.
+								<h1>Connecting with Students</h1>
+								<h3>When you study a psychology course at Liverpool Hope University you become a member of the Department of Psychology. An important aspect of our community is connecting with students, and throughout your course you have the chance to get involved in different events and activities, and shape the learning experience. This website provides details about the ways in which students work with academic tutors, how feedback is used to enhance the psychology courses, and opportunities for tutors and students to get involved in the community.
 								</h3>
 							</div>
 						</div>
@@ -106,7 +105,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="section-title">
-					<h2>Frequently Asked Questions</h2>
+					<h2>Student Voice<small>What is the Student Voice Committee?</small></h2>
+						<p>The Student Voice Committee in the Department of Psychology is a committee made up of academic tutors and students from Psychology and we work together to ensure the psychology courses are meeting the needs and expectations of our students and colleagues				
+						</p>
 				</div>
 			</div>
 <!--EACH SECTION HAS ITS OWN DIV CLASS ONLY EDIT BETWEEN <SPAN></SPAN> TAGS-->					
@@ -116,7 +117,7 @@
 						<img src="images/tinygreen.png" class="img-responsive" alt="">
 					</div>
 					<div class="team-info">
-						<h5>How many hours face to face contact time do students have?</h5><p>This depends upon the course that the student has chosen.  Single Honours students, undertaking a BSc in Psychology will have X hours of contact time per week.  Students on a combined honours course will have X hours of contact time in the Psychology Deprtment and a comparable amount in their other subject
+						<p>Listening and learning from the student voice allows the department and student bodies to receive and analyse up-to-date student feedback. This feedback helps to keep us informed of the needs of the students, which in turn allows us to improve, refine and make educated decisions toward all departmental processes.
 						</p>
 					</div>
 				</div>
@@ -128,9 +129,8 @@
 						<img src="images/tinyred.png" class="img-responsive" alt="">
 					</div>
 					<div class="team-info">
-					<h5>Which days will I be required to be on campus?</h5>
-						<p>Single honours Psychology students will be on campus Monday, Tuesday, Thursday and Friday. Combined honours students will be on campus on Monday and Friday for Psychology, and their other subject will determine which other days they need to attend
-						</p>
+						<span>We consider all the things that are going well on the courses, and we also look at possible improvements. The University relies on feedback from students to make sure that it is providing the best quality of education. In the Department of Psychology, we are very keen to ensure the student voice is heard! A Student Rep's role is to be the ‘voice’ for your group
+						</span>
 					</div>
 				</div>
 			</div>
@@ -141,9 +141,8 @@
 						<img src="images/tinynavy.png" class="img-responsive" alt="">
 					</div>
 					<div class="team-info">
-					<h5>Is learning face to face?</h5>
-						<p>Yes. We believe that face to face learning blah blah blah.....						
-						</p>
+						<span>Information on this page provides the names of your student representatives, and outlines the feedback provided to us, and how we have responded to that feedback to enhance the student experience.							
+						</span>
 					</div>
 				</div>
 			</div>
@@ -205,7 +204,6 @@
 						<figcaption>
 							<h5>Postgraduate</h5>
 								<p>Marie Stamp 20211231@hope.ac.uk</p>
-								<p>Maram Yehiah 22013341@hope.ac.uk</p>
 						</figcaption>
 					</figure>
 				</div>
@@ -973,7 +971,7 @@
 											<img src="images/sennaI.png" class="img-responsive" alt="">
 										</div>
 										<div class="courses-detail">
-											<span><strong>25/10/23</strong></span>
+											<span>25/10/23</span>
 							<span>We are excited to announce our first departmental research seminar, starting next week on the 25th of October at 2pm in room SSA007.
 								Dr. Irene Senna will be presenting her research on "Recovering from Blindness: Learning to see after sight restoration from congenital cataracts."</span>
 																			</div>
@@ -1001,7 +999,7 @@
 								<div class="courses-thumb">
 									<div class="courses-top">
 																	<div class="courses-image">
-									<img src="images/globalhope2.png" class="img-responsive" alt="">
+									<img src="images/globalhope1.png" class="img-responsive" alt="">
 										</div>
 										<div class="courses-detail">
 											<span><Strong>28/08/23 - Student Blog Global Hope</Strong></span>
