--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
 					<figure>
 						<figcaption>
 							<h5>Level C</h5>
-								<p>Steph Todd 23001422@hope.ac.uk</p>
-								<p>Iqra Aziz 23012260@hope.ac.uk</p>
+								<p>Melissa Barrett 24013109@hope.ac.uk</p>
+								<p>Hayden Elliott 23008438@hope.ac.uk</p>
 						</figcaption>
 					</figure>
 				</div>
@@ -180,9 +180,9 @@
 					<figure>
 						<figcaption>
 							<h5>Level I</h5>
-								<p>Andreea Iordache 22007421@hope.ac.uk</p>
-								<p>Jamie Sharp 21006954@hope.ac.uk</p>
-								<p>Jasmine Lea 20203826@hope.ac.uk</p>
+								<p></p>
+								<p></p>
+								<p></p>
 						</figcaption>
 					</figure>
 				</div>
@@ -193,10 +193,10 @@
 					<figure>
 						<figcaption>
 							<h5>Level H</h5>
-								<p>Caroline Knowles 21000865@hope.ac.uk</p>
-								<p>Gemma Hough 21001055@hope.ac.uk</p>
-								<p>Imogen Freedman 20206298@hope.ac.uk</p>
-								<p>Joseph Martin 20210781@hope.ac.uk</p>
+								<p></p>
+								<p></p>
+								<p></p>
+								<p></p>
 						</figcaption>
 					</figure>
 				</div>
@@ -204,8 +204,8 @@
 					<figure>
 						<figcaption>
 							<h5>Postgraduate</h5>
-								<p>Marie Stamp 20211231@hope.ac.uk</p>
-								<p>Maram Yehiah 22013341@hope.ac.uk</p>
+								<p></p>
+								<p></p>
 						</figcaption>
 					</figure>
 				</div>
@@ -235,7 +235,7 @@
 			
 <!-- THIS TEXT WILL NEED UPDATING ANNUALLY WITH THE NEW DATE-->			
 			<div class="row">
-				<p>Connecting with students is very important to the Department of Psychology. There are several opportunities for you to provide feedback on the teaching and learning in Psychology at Liverpool Hope University. The tutors take your feedback seriously, whether that be formal feedback via the course evaluations at the end of the year, feedback from Student Representatives via the Student Voice Committee, or informal feedback in lectures, seminars, and tutorials. At the start of the new academic year, we outlined how we are using this feedback for the 2023-24 academic year. Here are some things that you told us at the Student Voice Committee, and how we have responded.</p>
+				<p>Connecting with students is very important to the Department of Psychology. There are several opportunities for you to provide feedback on the teaching and learning in Psychology at Liverpool Hope University. The tutors take your feedback seriously, whether that be formal feedback via the course evaluations at the end of the year, feedback from Student Representatives via the Student Voice Committee, or informal feedback in lectures, seminars, and tutorials. At the start of the new academic year, we outlined how we are using this feedback for the 2024-25 academic year. Here are some things that you told us at the Student Voice Committee, and how we have responded.</p>
 			</div>
 			<h5>Jump to....
 				<a href="#wedid">Level C</a> | 
@@ -253,6 +253,68 @@
 			<H2>Responding to Level C Student feedback</h2>
 		<div class="owl-carousel owl-theme owl-courses">
 <!-- THIS IS AN EXAMPLE OF A LEVEL C SV COMMENT AND RESOLUTION. COPY IT, PASTE IT AFTER ALL LEVEL C COMMENTS AND EDIT THE <H4></H4>, THE sPAN TAGS, AND THE CONTENT IN THE <P> </P>TAGS -->
+		<!--Next Item--><div class="col-md-10 col-sm-10">
+				<div class="item">
+					<div class="courses-thumb">
+						<div class="courses-top">
+							<div class="courses-image">
+								<img src="images/smallred.png" class="img-responsive" alt="red background for heading">
+							</div>
+							<div class="courses-date">
+								<h4>Level C Core 2 Apr 2024</h4>
+									<span>General</span>
+							</div>
+						</div>
+						<div class="courses-detail">
+							<p><strong>‘Students reported enjoying the discussion opportunities in Core 2’</strong></p>
+							<p>We are delighted that students are actively participating in, and enjoying discussions. Equally we love to hear your perspectives, and we hope you keep on doing so as it makes for a vibrant atmosphere in class.</p>
+						</div>
+					</div>
+				</div>
+			</div>	
+			
+<!--Next Item--><div class="col-md-10 col-sm-10">
+				<div class="item">
+					<div class="courses-thumb">
+						<div class="courses-top">
+							<div class="courses-image">
+								<img src="images/smallred.png" class="img-responsive" alt="red background for heading">
+							</div>
+							<div class="courses-date">
+								<h4>Level C Core 2 Apr 2024</h4>
+									<span>EDP</span>
+							</div>
+						</div>
+						<div class="courses-detail">
+							<p><strong>‘We would benefit from some step by step videos for EDP’</strong></p>
+							<p>Glen highlighted that there are videos for the Simple Reaction Time and Choice Reaction Time experiments on the <a href="https://glenpennington.github.io/EDP/videos.html">EDP Web Page</a>. These videos were also linked from the EDP Forum, so remember to keep an eye on your forum announcements for the latest information.</p>
+						</div>
+					</div>
+				</div>
+			</div>			
+	<!--Next item-->
+<div class="col-md-10 col-sm-10">
+				<div class="item">
+					<div class="courses-thumb">
+						<div class="courses-top">
+							<div class="courses-image">
+								<img src="images/smallred.png" class="img-responsive" alt="red background for heading">
+							</div>
+							<div class="courses-date">
+								<h4>Level C Core 2 Apr 2024</h4>
+									<span>EDP Forum Settings</span>
+							</div>
+						</div>
+						<div class="courses-detail">
+							<p><strong>‘How do we change the forum settings to receive one daily digest of posts?’</strong></p>
+							<p>We know the amount of information that you receive can be overwhleming, so a simple change to your Forum settings can reduce the emails to one single daily digest. Click through to the Forum, click the circle with your initials at the top of the page.  Click Preferences, then in teh User account section select Forum Preferences. Ensure that the Forum Preferences email digest type is set to Subjects (daily email with subjects only)</p>
+						</div>
+					</div>
+				</div>
+			</div>			
+	<!--Next item-->	
+	
+			
 			<div class="col-md-10 col-sm-10">
 				<div class="item">
 					<div class="courses-thumb">
@@ -345,7 +407,30 @@
 				</div>
 			</div>
 		</div>
+
 <!--Next item-->
+		<div class="col-md-10 col-sm-10">
+			<div class="item">
+				<div class="courses-thumb">
+					<div class="courses-top">
+						<div class="courses-image">
+							<img src="images/smallgreen.png" class="img-responsive" alt="red background for heading">
+						</div>
+						<div class="courses-date">
+							<h4>Level I Core 1 Mar 2024</h4>
+								<span>Participating in SONA studies</span>
+						</div>
+					</div>
+				<div class="courses-detail">
+					<p><strong>‘Some students find it difficult to access SONA and participate in studies.’</strong></p>
+					<p>Access issues have now been resolved and Level I students can participate in SONA studies</p>
+				</div>
+			</div>
+		</div>
+	</div>
+<!--Next item-->
+
+
 		<div class="col-md-10 col-sm-10">
 			<div class="item">
 				<div class="courses-thumb">
