--- a/index.html
+++ b/index.html
@@ -90,14 +90,15 @@ http://www.templatemo.com/tm-468-onetel
 <!-- about section -->
 <div id="about">
 	<div class="container">
+	
 		<div class="row">
-			<div class="col-md-6 col-sm-12">
+				<!--<div class="col-md-6 col-sm-12">
 				<img src="images/psychsoc.png" class="img-responsive" alt="about img">
 			</div>
 			<div class="col-md-6 col-sm-12 about-des">
-				<h2>Psychology Society</h2>
+			<h2>Psychology Society</h2>
 				<p>A Student Psychology Society is a university organisation aimed at fostering interest in psychology among students. It provides a platform for engaging with psychological concepts outside the classroom, offering networking opportunities, discussions, and professional development through guest lectures, workshops, and events. The Psychology Society can also facilitate peer support, enabling collaboration on research projects and resource sharing. By joining, students can enhance their academic experience, deepen their understanding of human behavior and mental processes, and connect with like-minded peers.</p>
-				<a href="about.html" class="btn btn-default">LEARN MORE</a>
+				<a href="about.html" class="btn btn-default">LEARN MORE</a>-->
 			</div>
 		</div>
 	</div>
@@ -115,10 +116,10 @@ http://www.templatemo.com/tm-468-onetel
          <div class="row mt30">
             
 			<div class="col-md-4 col-sm-4 col-xs-6">
-				<a href="https://liverpoolhopepsychologydept.github.io/Labs/"><img src="images/PsychologyLabsWebsite.png" alt="A student is holding a tablet device, observing anotehr student using eyetracking glasses"></a>
+				<a href="https://liverpoolhopepsychologydept.github.io/Labs/"><img src="images/PsychologyLabsWebsite.png" alt="A student is holding a tablet device, observing another student using eyetracking glasses"></a>
 			</div>
 			<div class="col-md-4 col-sm-4 col-xs-6">
-				<a href="https://glenpennington.github.io/EDP/"><img src="images/learnPsychopy.png" alt="a researcher is using psychopy to generate and run an experiment"></a>
+				<a href="https://liverpoolhopepsychologydept.github.io/EDP/"><img src="images/learnPsychopy.png" alt="a researcher is using psychopy to generate and run an experiment"></a>
 			</div>
 			<div class="col-md-4 col-sm-4 col-xs-6">
 				<a href="yswd.html"><img src="images/yousaidwedid.png" alt="graphic with two speech bubbles.  one says you said, and the other says we did. This illustrates that the committee respond to student voice comments"></a>
